# CompetitiveAnalysisAgent

./: .dockerignore  .gitignore  Dockerfile.api  README.md  package-lock.json  package.json  railway.json
apps/api/: .dockerignore  .env.example  Dockerfile  Procfile  docker-entrypoint.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
apps/api/src/battlescope_api/: log_setup.py  main.py  settings.py
apps/api/src/battlescope_api/graph/: __init__.py  builder.py  checkpoints.py  routing.py  state.py
apps/api/src/battlescope_api/models/: __init__.py  company_profile.py  competitive_strategy.py  competitor_landscape.py  peer_research_digest.py
apps/api/src/battlescope_api/prompts/: competitive_strategy_system.md  competitor_discover.md  competitor_react_system.md  gap_analyst.md  intake_profiler.md  intake_react_system.md  peer_react_system.md  planner_router.md  research_worker.md  strategy_writer.md
apps/api/src/battlescope_api/services/: run_initial_state.py  trace.py  (+1 more)
apps/api/tests/: conftest.py  test_graph_smoke.py  test_health.py  test_runs.py  test_runs_stream.py
apps/api/tests/fixtures/: competitor_page.md  llm_profile_with_fence.txt  tavily_search_response.json
apps/api/tests/unit/: test_alphavantage_client.py  test_competitive_strategy_node.py  test_competitor_discover_node.py  test_intake_profiler.py  test_json_repair.py  test_log_setup.py  test_peer_research_parallel.py  test_sec_risk_categories.py  test_sec_risk_helpers.py  test_sec_risk_html_extract.py  test_sec_risk_node.py  test_settings_openai_url.py  test_tool_client_retries.py
(+53 files in other folders)
